# Marine-Debris

./: .gitignore  README.md  create_test_metadata.py  dataset.py  debris_geolocation_map.json  documentation.md  evaluation.py  extension.py  extensionService.py  main.py  marine_debris_route_map.html  marine_debris_world_map.html  model_analysis.py  params.py  plot.py  preprocessing.py  pyproject.toml  requirements.txt  shallow_train.py  test.py  test_patch_predictions.json  train.py
cnn_tiles/: output.npy  tile_0_0.npy
models/: resnet18.py  shallow.py  simple_cnn.py
utils/: generate_geolocation_map_v2.py  plot.py  preprocessing.py
