[project]
name = "marine-debris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.14.0",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "scikit-image>=0.25.2",
    "tifffile>=2025.8.28",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
