[project]
name = "marine-debris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "h5py>=3.14.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "rasterio>=1.4.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "shapely>=2.1.2",
    "tables>=3.10.2",
    "tifffile>=2025.8.28",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
